--- a/rpg.bib
+++ b/rpg.bib
@@ -1,4 +1,4 @@
-@inproceedings{10.1145/2676723.2677236,
+@inproceedings{toth15,
 author = {Toth, David and Kayler, Mary},
 title = {Integrating Role-Playing Games into Computer Science Courses as a Pedagogical Tool},
 year = {2015},
@@ -23,4 +23,15 @@ series = {SIGCSE '15}
   pages={283--299},
   year={2018},
   publisher={Routledge}
+}
+
+@article{flores2019innovacion,
+  title={Innovaci{\'o}n educativa en el aula mediante Design Thinking y Game Thinking},
+  author={Arias-Flores, Hugo and Jad{\'a}n-Guerrero, Janio  and G{\'o}mez-Luna, Luc{\'\i}a },
+  journal={Hamut\'ay},
+  volume={6},
+  number={1},
+  pages={82--95},
+  year={2019},
+  publisher={Atlas}
 }
