--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -60,3 +60,11 @@ eprint = {
   publisher={Sage Publications Sage CA: Thousand Oaks, CA}
 }
 
+@InBook{scriven1967social,
+  chapter={THE METHODOLOGY OF EVALUATION},
+  author={Scriven, Michael},
+  title={Perspectives in curriculum evaluation},
+  editors={Tyler, Gagné, Scriven}
+  year={1967},
+  publisher={Rand McNally}
+}
