#13 on problem-based learning

--- a/pbl.bib
+++ b/pbl.bib
@@ -55,18 +55,56 @@ eprint = {
 
 
 
+@article{fuchs1986effects,
+  title={Effects of systematic formative evaluation: A meta-analysis},
+  author={Fuchs, Lynn S and Fuchs, Douglas},
+  journal={Exceptional children},
+  volume={53},
+  number={3},
+  pages={199--208},
+  year={1986},
+  publisher={SAGE Publications Sage CA: Los Angeles, CA}
+}
 
 
 
 
 
 
+@article{otero2018flipped,
+  title={Flipped learning and formative evaluation in higher education},
+  author={Otero-Saborido, Fernando M and S{\'a}nchez-Oliver, Antonio J and Grimaldi-Puyana, Mois{\'e}s and {\'A}lvarez-Garc{\'\i}a, Jos{\'e}},
+  journal={Education+ Training},
+  volume={60},
+  number={5},
+  pages={421--430},
+  year={2018},
+  publisher={Emerald Publishing Limited}
+}
 
 
 
+@article{felder2007random,
+  title={Random thoughts: Sermons for grumpy campers},
+  author={Felder, Richard M},
+  journal={Chemical Engineering Education},
+  volume={41},
+  number={3},
+  pages={183--184},
+  year={2007}
+}
 
 
 
+@article{tharayil2018strategies,
+  title={Strategies to mitigate student resistance to active learning},
+  author={Tharayil, Sneha and Borrego, Maura and Prince, Michael and Nguyen, Kevin A and Shekhar, Prateek and Finelli, Cynthia J and Waters, Cynthia},
+  journal={International Journal of STEM Education},
+  volume={5},
+  pages={1--16},
+  year={2018},
+  publisher={Springer}
+}
 
 
 
@@ -103,3 +141,16 @@ eprint = {
 }
 
 
+@article{
+doi:10.1073/pnas.1821936116,
+author = {Louis Deslauriers  and Logan S. McCarty  and Kelly Miller  and Kristina Callaghan  and Greg Kestin },
+title = {Measuring actual learning versus feeling of learning in response to being actively engaged in the classroom},
+journal = {Proceedings of the National Academy of Sciences},
+volume = {116},
+number = {39},
+pages = {19251-19257},
+year = {2019},
+doi = {10.1073/pnas.1821936116},
+URL = {https://www.pnas.org/doi/abs/10.1073/pnas.1821936116},
+eprint = {https://www.pnas.org/doi/pdf/10.1073/pnas.1821936116},
+abstract = {We compared students’ self-reported perception of learning with their actual learning under controlled conditions in large-enrollment introductory college physics courses taught using 1) active instruction (following best practices in the discipline) and 2) passive instruction (lectures by experienced and highly rated instructors). Both groups received identical class content and handouts, students were randomly assigned, and the instructor made no effort to persuade students of the benefit of either method. Students in active classrooms learned more (as would be expected based on prior research), but their perception of learning, while positive, was lower than that of their peers in passive environments. This suggests that attempts to evaluate instruction based on students’ perceptions of learning could inadvertently promote inferior (passive) pedagogical methods. For instance, a superstar lecturer could create such a positive feeling of learning that students would choose those lectures over active learning. Most importantly, these results suggest that when students experience the increased cognitive effort associated with active learning, they initially take that effort to signify poorer learning. That disconnect may have a detrimental effect on students’ motivation, engagement, and ability to self-regulate their own learning. Although students can, on their own, discover the increased value of being actively engaged during a semester-long course, their learning may be impaired during the initial part of the course. We discuss strategies that instructors can use, early in the semester, to improve students’ response to being actively engaged in the classroom.}}
